# shorelark

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
apps/coach/: Cargo.toml
apps/coach/src/: main.rs
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  crossover.rs  genome.rs  individual.rs  lib.rs  mutation.rs  selection.rs  statistics.rs
libs/genetic-algorithm/src/crossover/: uniform.rs
libs/genetic-algorithm/src/mutation/: gaussian.rs  skew.rs
libs/genetic-algorithm/src/selection/: roulette_wheel.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  layer_topology.rs  lib.rs  neuron.rs
libs/optimizer/: Cargo.toml
libs/optimizer/src/: analyze.rs  common.rs  main.rs  simulate.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: animal.rs  config.rs  food.rs  lib.rs  point.rs  vector.rs  world.rs
libs/simulation/src/: animal.rs  animal_individual.rs  animal_indvidual.rs  brain.rs  config.rs  eye.rs  food.rs  generation_summary.rs  lib.rs  statistics.rs  world.rs
www/: app.css  app.js  bootstrap.js  index.css  index.html  index.js  package-lock.json  package.json  webpack.config.js
www/app/: terminal.js  viewport.js
www/app/components/: terminal-stdin.js  terminal-stdout.js  viewport.js
