[package]
name = "optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12.1"
ordered-float = { version = "4.2.0", features = ["serde"] }
rand = "0.8"
rayon = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }

lib-genetic-algorithm = { path = "../genetic-algorithm" }
lib-simulation = { path = "../simulation" }
