[package]
name = "lib-simulation"
version = "0.0.0"
authors = ["Patryk Wychowaniec <pwychowaniec@pm.me>"]
edition = "2018"

[dependencies]
nalgebra = { version = "0.26", features = ["rand-no-std"] }
rand = "0.8"

lib-genetic-algorithm = { path = "../genetic-algorithm" }
lib-neural-network = { path = "../neural-network" }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
